# MetaPlogging

./: .gitignore
.claude/: settings.local.json
backend/: .env.example  metaplogging.db  pyproject.toml
backend/api/v1/: auth.py  comments.py  images.py  places.py  posts.py  tracking.py  users.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  geo.py  security.py
backend/app/models/: place.py  post.py  tracking.py  user.py
backend/app/schemas/: auth.py  place.py  post.py  tracking.py
backend/docs/: API.md  backend.md
backend/docs/update_log/: 2026-05-07T02:35:12.md  2026-05-07T17:20:01.md
frontend/: .env.example  .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/docs/: app-flow.md  data-model.md  mvp-features.md
frontend/docs/features_data/: README.md
frontend/docs/features_data/_shared/: auth_provider.md  feed_provider.md  user_entity.md
frontend/docs/features_data/auth/: find_account_page.md  landing_page.md  login_page.md  register_page.md
frontend/docs/features_data/feed/: create_post_sheet.md  feed_page.md  post_card.md  post_entity.md
frontend/docs/features_data/home/: home_page.md
frontend/docs/features_data/plogging/: plogging_page.md
frontend/docs/features_data/profile/: profile_page.md
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/network/: api_endpoints.dart  dio_client.dart
frontend/test/: widget_test.dart
(+61 files in other folders)
