[project]
name = "metaplogging-backend"
version = "0.1.0"
description = "MetaPlogging FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-dotenv",
    "pydantic-settings",
    "pydantic[email]",
    "google-auth",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = false
